TLS-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
    - web.example.local
    secretName: web-tls-secret
  rules:
  - host: web.example.local
    http:
      paths:     
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 80
